# cosmwasm-bridge

./: .gitignore  Cargo.toml  README.md
bridge/: Cargo.toml  README.md
bridge/examples/: schema.rs
bridge/schema/: execute_msg.json  instantiate_msg.json
bridge/src/: msg.rs
bridge/src/libraries/: multi_store.rs  obi.rs
ds/: README.md  get_and_return_json.py
example_interaction_js/: README.md  index.js  package.json  proof_example.js  utils.js
examples/: schema.rs
os/: README.md  cargo.toml
simple_consumer/: README.md
simple_sportdata_consumer/: Cargo.toml
simple_sportdata_consumer/schema/: query_msg.json
simple_sportdata_consumer/src/: contract.rs  lib.rs  msg.rs  state.rs  struct_types.rs
src/: contract.rs  lib.rs  msg.rs  state.rs  struct_types.rs
src/libraries/: mod.rs  obi.rs  tm_signature.rs  utils.rs
