[package]
name = "cosmwasm-simple-consumer"
version = "0.1.0"
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16.4" }
cosmwasm-storage = { version = "0.16.4" }
# cosmwasm-crypto = { version = "0.16.4" }
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.10" }
# sha2 = "0.10.2"
# cw-storage-plus = "0.6.2"
hex = "0.4.3"
# sha3 = "0.10.1"
bincode = "1.3.3"
serde_json = "1.0.67"
getrandom = { version = "0.2.3", features = ["js"] }
prost = "0.7"
base64 = { version = "0.13.0", default-features = false }
obi = "0.0.2"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.4" }
